# seism-core

./: .gitignore  40GB-init.txt  CMakeLists.txt  IO.F90  KERNEL.F90  LICENSE  Makefile  Makefile.bw  Makefile.bw-1.10.0  Makefile.jelly  Makefile.vm  README.md  build.sh  bw_testbenchmarks  check.in  h5core.c  input  metadata.hh  package.py  parse_input.cc  parse_input.h  prep_data  run-simple.sh  run.sh  sample.pbs  sample_run.out  seism-core-attributes.cc  seism-core-attributes.hh  seism-core-check.cc  seism-core-slice.cc  seism-core-test.cc  seism-core.cc  seism-core.hh  test-slice.pbs
bb_runscripts/bbhdf5mpi/: CTestScript.cmake  bbtconf.json  doCTSourcepackage.py  doCTconfig.py  doCTpackage.py  doCTrun.py  dobtftpup.py  dobtuncompress.py  doftp.py  runhdf5trunk.sh
bb_runscripts/bbperf/: bbtconf.json  doATcheck.py  doATconfig.py  doATmake.py  doFilesftp.py  doatlin.py  dobtftp.py  doinstall.py  douncompress.py  runperf.sh
combust_io/: IO.F90  KERNEL.F90  README.md  input  prep_data.bb
combust_io/example/: input
combust_io/scripts/: kernel.sh
combust_io/src/: KERNEL.F90  Makefile.bb  kernel.sh
example_inputs/: check-plugin.in  scale-8.in
h5core/: README.md
h5core/makefiles/: Makefile.bb
h5core/scripts/: doit.sh  h5core.sh  h5core_110.pbs  h5core_dev.pbs
h5core/src/: Makefile.bb  h5core.c
h5core/tests/: no-init.txt
h5perf/scripts/: h5perf.sh
h5perf/src/: Makefile  Makefile.bb  pio_standalone.h
legacy_Makefiles/: Makefile.bw.darshan3  Makefile.falcon  darshan-pnetcdf-stubs.c  features.mk  targets.mk
legacy_Makefiles/plugins/: Makefile.bw
scripts/: 100M-precreate-single.pbs  100M-precreate.pbs  100M-wide.pbs  100M.pbs  200M-8.pbs  200M.pbs  5M-precreate.pbs  5M-wide.pbs  5M.pbs  Fri_Dec_16_15:15:48_CST_2016.pbs  Fri_Dec_30_10:58:22_CST_2016.pbs  Fri_Dec__9_10:40:20_CST_2016.pbs  Mon-Dec--5-16:31:21-CST-2016.pbs  README.md  Thu_Dec__8_15:40:45_CST_2016-2stripe.pbs  Thu_Dec__8_15:40:45_CST_2016.pbs  bash_include.sh  processor_geometry.sh  sample.pbs  sample.slurm  script.pbs
scripts/cgns/: cgns-mem.gnu  cgns.gnu  run_cgns.sh
scripts/h5perf/: run_ior.sh  run_perf.sh
seism-core/: README.md  machinefile  seism-core-attributes.hh
seism-core/makefiles/: Makefile.bb  Makefile.bw-1.10.0  Makefile.jelly
seism-core/src/: Makefile.bb  Makefile.bw-1.10.0  Makefile.edison  Makefile.jelly  Makefile.tacc  Makefile.theta  a.out  features.mk  seism-core-attributes.cc  seism-core-attributes.hh  seism-core-check.cc  seism-core-slice.cc  seism-read.cc  subfiling.mk  test.c
seism-core/src/plugins/: Makefile.jelly
seism-core/src/plugins/sd/: sd.c
seism-core/tests/: check-0.in  check-plugin.in  check-sd.in  check-sd.in.bw  check.in  scale-16.in  scale-64.in  serial.in  stampede.in  subfile.in
src/: CMakeLists.txt  Makefile.bw-1.10.0  Makefile.edison  Makefile.vm  seism-core-attributes.cc  seism-core-slice.cc  seism-read.cc
src/plugins/: CMakeLists.txt  gaussian.c  mpi_rank_fill.c
tests/: check.in  precreate-1.in  precreate0.in  precreate1.in  scale-128.in  scale-256.in  scale-32.in
tests/bw/: check-128-pre  check-16-pre  check-256-pre  check-32-pre  check-8-pre
tests/jelly/: check-16-pre  check-32-pre  check-64  check-64-ind  check-64-pre  check-8  check-8-pre  check.in  precreate1.in
